// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaximizeIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MaximizeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M4 12h4v1.996s-4.17.002-4.172 0c-.814.057-1.314-.465-1.314-.465s-.584-.48-.507-1.294c-.002-.002 0-4.233 0-4.233L4 8v4zm9.996-8.172c.057-.814-.465-1.314-.465-1.314s-.48-.584-1.294-.507c-.002-.002-4.233 0-4.233 0L8 4h4v4h1.996s.002-4.17 0-4.172z"
  />
</Icon>
`;

exports[`MaximizeIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MaximizeIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M4 12h4v1.996s-4.17.002-4.172 0c-.814.057-1.314-.465-1.314-.465s-.584-.48-.507-1.294c-.002-.002 0-4.233 0-4.233L4 8v4zm9.996-8.172c.057-.814-.465-1.314-.465-1.314s-.48-.584-1.294-.507c-.002-.002-4.233 0-4.233 0L8 4h4v4h1.996s.002-4.17 0-4.172z"
  />
</Icon>
`;

exports[`MaximizeIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MaximizeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M4 12h4v1.996s-4.17.002-4.172 0c-.814.057-1.314-.465-1.314-.465s-.584-.48-.507-1.294c-.002-.002 0-4.233 0-4.233L4 8v4zm9.996-8.172c.057-.814-.465-1.314-.465-1.314s-.48-.584-1.294-.507c-.002-.002-4.233 0-4.233 0L8 4h4v4h1.996s.002-4.17 0-4.172z"
  />
</Icon>
`;
